[fix] Fixed hidden vertical scrollbar in prod

--- a/client/index.css
+++ b/client/index.css
@@ -17,7 +17,7 @@
 
 html,
 body {
-  overflow: initial;
+  overflow: initial !important;
 }
 
 body {
